{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 64,
  "lineage": "e68284e9-7c8f-8318-64be-f06f19a2956b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0605d6208ec25b8aa",
            "domain": "vpc",
            "id": "eipalloc-01d844f49853bab8e",
            "instance": "i-04f42cf28edb18c9c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00ff29ec94d153d85",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-154-163-250.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.163.250",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver",
            "aws_security_group.sg1",
            "aws_subnet.sn1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mytest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d758c1134823146a",
            "arn": "arn:aws:ec2:ap-south-1:144739420959:instance/i-04f42cf28edb18c9c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f42cf28edb18c9c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_key_emailacc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00ff29ec94d153d85"
              }
            ],
            "primary_network_interface_id": "eni-00ff29ec94d153d85",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "35.154.163.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069287f638ee852f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a2d7e268d60eb2d",
            "tags": {
              "Name": "Terraformserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e645ac90fd8ffb4c"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver",
            "aws_security_group.sg1",
            "aws_subnet.sn1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144739420959:internet-gateway/igw-05963792732326a41",
            "id": "igw-05963792732326a41",
            "owner_id": "144739420959",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-02da0011c516e6060"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-023f7a6b3a3569b18",
                "device_index": 0,
                "instance": "i-04f42cf28edb18c9c"
              }
            ],
            "id": "eni-00ff29ec94d153d85",
            "ipv6_address_count": 0,
            "mac_address": "02:e2:b2:7a:b8:ca",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e645ac90fd8ffb4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a2d7e268d60eb2d",
            "tags": {
              "Name": "n/w int"
            }
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.sn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e9fd254c5946ba55",
            "owner_id": "144739420959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05963792732326a41",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05963792732326a41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt"
            },
            "vpc_id": "vpc-02da0011c516e6060"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038037a07bdb52bc7",
            "route_table_id": "rtb-0e9fd254c5946ba55",
            "subnet_id": "subnet-05a2d7e268d60eb2d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.sn1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144739420959:security-group/sg-0e645ac90fd8ffb4c",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e645ac90fd8ffb4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_webtraffic",
            "name_prefix": "",
            "owner_id": "144739420959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02da0011c516e6060"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144739420959:subnet/subnet-05a2d7e268d60eb2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05a2d7e268d60eb2d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144739420959",
            "tags": {
              "Name": "sn1"
            },
            "tags_all": {
              "Name": "sn1"
            },
            "vpc_id": "vpc-02da0011c516e6060"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144739420959:vpc/vpc-02da0011c516e6060",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0853a7683906faccc",
            "default_route_table_id": "rtb-0f0c72915555bd49b",
            "default_security_group_id": "sg-049a0eac0b65add2c",
            "dhcp_options_id": "dopt-ce7aa3a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02da0011c516e6060",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f0c72915555bd49b",
            "owner_id": "144739420959",
            "tags": {
              "Name": "vpc-1"
            },
            "tags_all": {
              "Name": "vpc-1"
            }
          }
        }
      ]
    }
  ]
}